# hangman

./: README.md  hangman.cabal
data/: dict.txt
src/: Main.hs
src/Hangman/: Game.hs  Puzzle.hs  Words.hs
