name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Hangman.Game
                      , Hangman.Puzzle
                      , Hangman.Words
  build-depends:       base >= 4.7 && < 5
                      , random
                      , split              

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Hangman.Game
                      , Hangman.Puzzle
                      , Hangman.Words
  build-depends:       base >= 4.7 && < 5
                      , random
                      , split                

